# plant-pal-back

./: .gitignore  README.md  makefile  pyproject.toml
devops/: Dockerfile
docker/: .env-example  docker-compose.dev.yaml  docker-compose.yaml
docker/overlays/: docker-compose.dev.yaml
src/: alembic.ini  main.py
src/core/: api_entrypoint.py  config.py
src/core/api/v1/endpoints/auth/: login.py  register.py
src/core/api/v1/schemas/: jwt.py  user.py
src/core/infrastructure/db/: db.py
src/core/infrastructure/db/migrations/: env.py
src/core/infrastructure/db/migrations/versions/: 2025_07_12_1216-840c76537ce4_создание_таблицы_пользователей.py  3ff0262cdc86_recreate_table_users2.py  5dcbe748100b_add_is_active_column.py  7be4ef2ae54d_initial_migration.py  8ac670eaa04f_recreate_table_users.py  986bf5ed39a8_change_password_type.py  cfede2a5310a_recreate_table_users3.py
src/core/infrastructure/db/models/: base.py  user.py
src/core/repositories/: user.py
src/core/utils/: auth.py  jwt_helper.py  security.py  validate_auth.py
